# procedural_generation

./: .gitignore  Cargo.toml  package-lock.json
assets/shaders/: animate_shader.wgsl  custom_extension.wgsl  extended_material.wgsl  game_of_life.wgsl  post_processing.wgsl
assets/shaders/compute/: marching_cubes.wgsl
examples/: marching_cubes.rs
examples/common/: mod.rs
examples/visualization/: noise.rs
examples/visualization/noise/: cellular.rs  mapped.rs  perlin.rs
src/: camera.rs  common.rs  compute_shader.rs  hud.rs  lib.rs  limit_fps.rs  main.rs  post_processing.rs
src/camera/: mod.rs
src/game/: camera.rs  mod.rs
src/game/map/: height_map.rs  mod.rs
src/input_handling/: mod.rs
src/noise/: value.rs
src/player/: mod.rs  movement.rs
src/shaders/: mod.rs  post_processing.rs
src/shaders/compute/: game_of_life.rs  marching_cubes.rs  mod.rs
src/terrain/: height_map.rs  mod.rs
src/ui/: mod.rs
src/ui/menu/: mod.rs
src/utils/: free_camera.rs  mod.rs  scalar_field.rs
src/utils/mesh_construction/: marching_cubes.rs  mod.rs
src/utils/noise/: cellular.rs  map.rs  mod.rs  perlin.rs
src/utils/noise/mapper/: functions.rs  mod.rs
src/utils/noise/perlin/: mod.rs  perlin_2d.rs  perlin_3d.rs
