[package]
name = "procedural_generation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.14.2", features = ["file_watcher"] }
bevy_dylib = "0.14.2"
bevy_framepace = "0.17.1"
bevy_rapier3d = { version = "0.27.0", features = ["parallel", "simd-stable"] }
rand = "0.8"
bevy-inspector-egui = "0.27"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[[example]]
name = "perlin_noise"
path = "examples/visualization/noise/perlin.rs"
# doc-scrape-examples = true

[package.metadata.example.noise]
name = "Compute - Game of Life"
description = "A compute shader that simulates Conway's Game of Life"
category = "Shaders"
wasm = false
